--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,24 +5,45 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            CS50 Project: {% block title %} {% endblock %}
+            CS50 Project DevBrain{% block title %} {% endblock %}
         </title>
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+        <!-- http://getbootstrap.com/docs/5.3/ -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
 
     <body>
 
         <!--header/Navigation bar-->
         <header>
-            <h1>DevBrain!</h1>
-            <p> Sharpen your engineering understanding one quiz at a time.</p>
-            <nav>
-                <ul>
-                    <li><a href="{{ url_for('home') }}">Home</a></li>
-                    <li><a href="{{ url_for('history') }}">History</a></li>
-                    <li><a href="{{ url_for('about') }}">About</a></li>
-                </ul>
-            </nav>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">DevBrain</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class= "collapse navbar-collapse" id="navbarNav">
+                    {% if session.get("user_id") %}
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('history') }}">History</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About Devbrain</a></li>
+                        </ul>
+                        
+                        <ul class="navbar-nav mx-2">
+                            <li class="nav-item"><a class="btn btn-danger" href="{{ url_for('logout') }}">Logout</a></li>
+                        </ul>
+                    {% else %}
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About Devbrain</a></li>
+                        </ul>
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item"><a class="btn btn-secondary" href="{{ url_for('register') }}">Register</a></li>
+                            <li class="nav-item"><a class="btn btn-primary" href="{{ url_for('login') }}">Login</a></li>
+                        </ul>
+                    {% endif %}
+                </div>
         </header>
 
         <!-- Flash Messages / Alerts -->
@@ -39,11 +60,15 @@
         <!-- Main Content -->
         {% block body %}{% endblock %}
 
+        
+
         <!-- Footer -->
         <footer>
             <ul>
                 <li>Copyright &copy; 2025 DevBrain. All rights reserved.</li>
                 <li><a href="https://github.com/RichardOyelowo/DevBrain.git">GitHub Page</a></li>
+                <li><a href="{{ url_for('about') }}">About DevBrain</a></li>
+                <li><a href="{{ url_for('history') }}">History</a></li>
             </ul>
         </footer>
     </body>
