--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -18,5 +18,20 @@
                 <div><button type="submit" class="btn btn-primary me-2">Reset Password</button></div>
             </form>
 
+        <!-- Reset Password Form -->
+        {% elif form_type == "reset" %}
+            <h2>Set a New Password</h2>
+            <form action="{{ url_for('forgot_password') }}" method="post">
+                <div class="mb-3">
+                    <label for="new_password">New Password:</label>
+                    <input type="password" id="new_password" name="new_password" class="form-control" autofocus required> 
+                </div>
+                <div class="mb-3">
+                    <label for="confirm_password">Confirm New Password:</label>
+                    <input type="password" id="confirm_password" name="confirm_password" class="form-control" required>
+                </div>
+                <div><button type="submit" class="btn btn-primary me-2">Set Password</button></div>
+            </form>
+        {% endif %}
     </div>
 {% endblock %}
