--- a/templates/register.html
+++ b/templates/register.html
@@ -7,20 +7,28 @@
 {% block body %}
     <div class="register-section container">
         <h2>Create an Account</h2>
-        <form action="/register" method="post">
-            <div class="form-group">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" class="form-control" required> 
+        {% if error %} <!-- Display error message if it exists -->
+            <p class="error-message">{{ error }}</p>
+        {% endif %}
+
+        <form action="{{ url_for('register') }}" method="post">
+            <div class="mb-3">
+                <label for="email">Email:</label>
+                <input type="text" id="email" name="email" class="form-control" autofocus autocomplete="email" required> 
             </div>
-            <div class="form-group">
+            <div class="mb-3">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" class="form-control" autofocus autocomplete="username" placeholder="optional" optional> 
+            </div>
+            <div class="mb-3">
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" class="form-control" required>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <label for="confirmation">Confirm Password:</label>
                 <input type="password" id="confirmation" name="confirmation" class="form-control" required>
             </div>
-            <button type="submit" class="btn btn-primary fw-bold">Register</button>
+            <div><button type="submit" class="btn btn-primary me-2">Register</button></div>
         </form>
     </div>
 {% endblock %}
