--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -2,15 +2,19 @@
 
 {% block body %}
     <div class="forgot-password-section container">
-        <!-- Display error message if it exists -->
-        {% if error %} 
-                <p class="error-message">{{ error }}</p>
+        <div class="mb-3">
+            <!-- Display error message if it exists -->
+            {% if error %} 
+                <h2 class="error-message">{{ error }}</h2>
             {% endif %}
+        </div>
 
         <!-- Forgot Password Form -->
         {% if form_type == 'forgot' %}
             <h2>Reset Your Password</h2>
-            <form action="{{ url_for('forgot_password') }}" method="post">
+            <form action="{{ url_for('auth.forgot_password') }}" method="post">
+                <!-- CSRF Token -->
+                <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
                 <div class="mb-3">
                     <label for="email">Enter your registered email address:</label>
                     <input type="email" id="email" name="email" class="form-control" autofocus required> 
@@ -18,10 +22,20 @@
                 <div><button type="submit" class="btn btn-primary me-2">Reset Password</button></div>
             </form>
 
+        <!-- Email Found or Not Found Confirmation -->
+        {% elif form_type == "sent_or_notfound" %}
+        <div class="mb-3">
+            <h2>If An Account Exists, Reset Link Sent</h2>
+            <h3>Please check your email for the password reset link. Make sure to check your spam folder.</h3>
+            <a href="{{ url_for('auth.login') }}" class="btn btn-primary">Go to Login</a>
+        </div>
+
         <!-- Reset Password Form -->
         {% elif form_type == "reset" %}
             <h2>Set a New Password</h2>
-            <form action="{{ url_for('forgot_password') }}" method="post">
+            <form action="{{ url_for('auth.reset_password', token=token) }}" method="post">
+                <!-- CSRF Token -->
+                <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
                 <div class="mb-3">
                     <label for="new_password">New Password:</label>
                     <input type="password" id="new_password" name="new_password" class="form-control" autofocus required> 
@@ -32,6 +46,11 @@
                 </div>
                 <div><button type="submit" class="btn btn-primary me-2">Set Password</button></div>
             </form>
+
+        <!-- Confirming new password submission -->
+        {% elif form_type == "success" %}
+            <h2>Your password has been successfully reset.</h2>
+            <a href="{{ url_for('login') }}" class="btn btn-primary">Go to Login</a>
         {% endif %}
     </div>
 {% endblock %}
