--- a/templates/login.html
+++ b/templates/login.html
@@ -15,13 +15,13 @@
             <!-- CSRF Token -->
             <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
             <div class="mb-3">
-                <label for="email" class="form-label">email:</label>
+                <label for="email" class="form-label">Email:</label>
                 <input type="text" class="form-control" id="email" name="email" autofocus autocomplete="email" required>
             </div>
 
             <div class="mb-3">
                 <label for="password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" required>
+                <input type="password" class="form-control" id="password" name="password" autocomplete="current-password" required>
             </div>
             <div><button type="submit" class="btn btn-primary mb-3">Login</button></div>
             <a type="submit" class="btn btn-secondary" href="{{ url_for('auth.forgot_password') }}">Forgotten Password</a>
