--- a/templates/register.html
+++ b/templates/register.html
@@ -32,5 +32,6 @@
             </div>
             <div><button type="submit" class="btn btn-primary me-2">Register</button></div>
         </form>
+        <p><a href="{{ url_for('auth.login') }}">Already have an account?</a></p>
     </div>
 {% endblock %}
