--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,8 +16,7 @@
     <body>
         <!--header/Navigation bar-->
         <header>
-            <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
+            <nav class="navbar text-white navbar-expand-lg">
                 <a class="navbar-brand" href="{{ url_for('index') }}">DevBrain</a>
                 
                  <!-- Toggler for mobile -->
@@ -32,7 +31,6 @@
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('quiz') }}">Quiz</a></li>
                             <li class="nav-item"><a class="nav-link" href="{{ url_for('history') }}">History</a></li>
                         {% endif %}
-                        <li class="nav-item"><a class="nav-link" href="{{ url_for('about') }}">About Us</a></li>
                     </ul>
                     
                     <!-- Right Navigation Links -->
@@ -47,7 +45,6 @@
                         </ul>
                     {% endif %}
                 </div>
-            </div>
             </nav>
         </header>
 
