--- a/static/styles.css
+++ b/static/styles.css
@@ -2,27 +2,56 @@
 body {
     background-color: #181A1F;
     color: #cdd6f4;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    margin: 0; /* removes default vertical spacing */
+    padding: 0; /* removes default horizontal padding */
+    text-align: left;
 }
 
-/* Header/Navbar Styling*/
+/* Container for main content */
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1px;
+    padding-right: 5px;
+}
+
+/* Header/Navbar Styling */
 header {
-    background-color: #11111b;
+    padding: 0 1rem;
+    background-color: #11111b !important;
+    width: 100%;
 }
 
+/* Footer Styling */
+footer {
+    width: 100%;     /* full width of parent (body) */
+    background-color: #11111b;   /* match header */
+    padding: 1rem 15px;  /* padding inside footer content */
+    margin-right: auto;         /* same as main container */
+    text-align: center;
+}
+
+/* Navbar links */
 .navbar, .navbar a, .navbar-brand {
     color: white !important;
 }
 
-footer {
-    background-color: #181A1F;
-}
-
-
+/* Headings */
 h1, h2, h3, h4, h5, h6 {
     color: #f5e0dc;
 }
 
-/* Accent color - soft cyan/blue */
+/* Lists */
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+/* Links / Accent color */
 a,
 .text-accent {
     color: #94dfec;
