--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,7 +60,9 @@
         {% endwith %}
 
         <!-- Main Content -->
-        {% block body %}{% endblock %}
-
+         <main class="container">
+            {% block body %}{% endblock %}
+         </main>
+        
     </body>
 </html>
