--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
         <div class="hero-actions">
             <a href="{{ url_for('auth.register') }}" class="btn btn-primary">Create Free Account</a>
-            <a href="{{ url_for('index') }}" class="btn btn-secondary">Try a Demo Quiz</a>
+            <a href="{{ url_for('quiz') }}" class="btn btn-secondary">Try a Demo Quiz</a>
         </div>
     </section>
 
